--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,7 @@ body {
     width: 100vw;
     min-height: 100vh;
     background: #f8f8f8;
+
 }
 
 .powerManagementContainer {
@@ -14,4 +15,13 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+select {
+    padding: 5px 10px;
+    border-radius: 10px;
+    border: 1px;
+    background: lightgray;
+    -moz-appearance: none; /* Firefox */
+    -webkit-appearance: none; /* Safari and Chrome */
 }
