--- a/css/installationsegment.css
+++ b/css/installationsegment.css
@@ -10,7 +10,7 @@
     border-radius: 5px;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: 350px 250px 250px 1fr;
+    grid-template-columns: 2fr 1fr 1fr 2fr;
     grid-template-rows: 150px;
     grid-template-areas: "checkboxAndWire wireImage deviceImage deviceSelect";
 }
@@ -19,8 +19,10 @@
     grid-area: checkboxAndWire;
     height: 100%;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: 1fr 2fr 1fr;
+    justify-items: center;
+    align-items: center;
 }
 
 .installationSegment .checkboxAndcableContainer input {
@@ -32,6 +34,10 @@
 .installationSegment .checkboxAndcableContainer .cableContainer {
     grid-column: 2/3;
     grid-row: 2/3;
+}
+
+.cableContainerInput input {
+    width: 100px;
 }
 
 .installationSegment .cableImageContainer {
@@ -91,16 +97,39 @@
 
 .buttonDiv {
     position: absolute;
-}
-    
-.sticky {
-  position: fixed;
-  display: inline;
-  top: 50px;
-  left: 20px;
-  z-index: 9999;
+    padding-left: 5px;
 }
 
+.buttonDiv > * {
+    margin: 5px;
+}
+
+.sticky {
+    position: fixed;
+    display: inline;
+    top: 50px;
+    left: 20px;
+    z-index: 9999;
+}
+
+@media (max-width: 1700px) {
+    .buttonDiv {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-left: 30px;
+    }
+}
+
+@media (max-width: 1000px) {
+    .installationSegment {
+        margin-left: auto;
+    }
+    .buttonDiv {
+        margin-left: 2px;
+    }
+}
 
 
 
