--- a/css/psustyles.css
+++ b/css/psustyles.css
@@ -6,7 +6,7 @@
     margin: 0 auto;
     width: 65%;
     display: grid;
-    grid-template-columns: 350px 250px 250px 1fr;
+    grid-template-columns: 2fr 1fr 1fr 2fr;
     grid-template-rows: 90px;
     place-items: center;
     grid-template-areas: 
@@ -30,37 +30,3 @@
 .powerSupplyContainer label {
     grid-area: psuSelect;
 }
-
-
-/*.powerSupplyContainer {*/
-/*    display: grid;*/
-/*    width: 65%;*/
-/*    margin: 0 auto;*/
-/*    background: green;*/
-/*    border-radius: 5px;*/
-/*    grid-template-columns:  1fr 1fr 1fr 1fr;*/
-/*    grid-template-rows: 100px;*/
-/*    grid-template-areas: ". psuImage . psuSelect";*/
-/*    justify-items: center;*/
-/*    align-items: center;*/
-/*}*/
-
-/*.powerSupplyContainer .psuImageContainer {*/
-/*    grid-column: 2 / span 2;*/
-/*    background: aqua;*/
-/*    height: 85%;*/
-/*    width: 100%;*/
-/*    align-self: end;*/
-/*    display: grid;*/
-/*    grid-template-columns: 1fr;*/
-/*}*/
-
-/*.powerSupplyContainer .psuImageContainer .psuimage {*/
-/*    height: 100%;*/
-/*    padding-left: 15px;*/
-/*    justify-self: center;*/
-/*}*/
-
-/*.powerSupplyContainer .powerSupplyLabel {*/
-/*    grid-area: psuSelect;*/
-/*}*/
