--- a/css/installationsegment.css
+++ b/css/installationsegment.css
@@ -4,8 +4,12 @@
     min-height: 100vh;
 }
 
+.installationContainer {
+    width: 100%;
+}
+
 .installationSegment {
-    width: 65%;
+    width: 100%;
     background: rgb(65, 64, 66);
     border-radius: 5px;
     margin: 0 auto;
@@ -95,14 +99,14 @@
     padding-bottom: 100px;
 }
 
-.buttonDiv {
-    position: absolute;
-    padding-left: 5px;
-}
+/*.buttonDiv {*/
+/*    position: absolute;*/
+/*    padding-left: 5px;*/
+/*}*/
 
-.buttonDiv > * {
-    margin: 5px;
-}
+/*.buttonDiv > * {*/
+/*    margin: 5px;*/
+/*}*/
 
 .sticky {
     position: fixed;
