--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,4 @@
 body {
-    box-sizing: border-box;
     margin: 0;
     width: 100%;
     min-height: auto;
@@ -9,12 +8,9 @@ body {
 .powerManagementContainer {
     width: 100%;
     margin: 40px auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
 }
 
+/* styles to remove arrows from input element */
 #quantity::-webkit-outer-spin-button,
 #quantity::-webkit-inner-spin-button {
   -webkit-appearance: none;
@@ -28,7 +24,8 @@ body {
 
 select {
     padding: 5px 10px;
-    min-width: auto;
+    max-width: 180px;
+    text-align: center;
     border-radius: 10px;
     border: 1px;
     background: lightgray;
@@ -44,11 +41,8 @@ select {
     list-style: none;
     color:white;    
     text-align: center;     
-    padding:5px 0;
+    padding: 5px 0;
     margin: 2px 0;    
-}
-
-.powerManagementInstallationContainer .systemInfo ul.segmentInfo {
 }
 
 .powerManagementInstallationContainer .systemInfo ul.segmentInfo:nth-child(odd){
@@ -58,8 +52,3 @@ select {
 .powerManagementInstallationContainer .systemInfo ul.segmentInfo:nth-child(even){
     background: rgba(204,53,51, 0.9);  
 }
-
-
-/*.powerManagementInstallationContainer div.toggle {*/
-/*    display: block;*/
-/*}*/
