--- a/css/installationsegment.css
+++ b/css/installationsegment.css
@@ -1,20 +1,16 @@
 .powerManagementInstallationContainer {
     margin: 0 10px;
-    width: 95%;
-    height: 100%;
     min-height: 100vh;
     display: grid;
     grid-template-columns: 2fr 1fr;
-    grid-template-rows: 90px 1fr;
+    grid-template-rows: 75px 1fr;
     grid-template-areas: 
         "powerSupply ."
-        "installation installationInfo"
-    ;
+        "installation installationInfo";
 }
 
 .powerManagementInstallationContainer .powerSupplyContainer {
     grid-area: powerSupply;
-    width: 100%;
 }
 .powerManagementInstallationContainer .installationContainer {
     grid-area: installation;
@@ -24,23 +20,22 @@
 }
 
 .installationContainer {
-    width: 100%;
+    min-height: 100vh;
 }
 
 .installationSegment {
-    width: 100%;
     background: rgb(65, 64, 66);
-    border-radius: 5px;
-    margin: 0 auto;
+    border-radius: 10px;
     display: grid;
-    grid-template-columns: 2fr 1fr 1fr 2fr;
+    grid-template-columns: 1fr auto auto 1fr;
     grid-template-rows: 150px;
-    grid-template-areas: "checkboxAndWire wireImage deviceImage deviceSelect";
+    grid-template-areas: 
+    "checkboxAndWire wireImage deviceImage deviceSelect"    
+    ;
 }
 
 .installationSegment .checkboxAndcableContainer {
     grid-area: checkboxAndWire;
-    height: 100%;
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
     grid-template-rows: 1fr 2fr 1fr;
@@ -65,74 +60,51 @@
 
 .installationSegment .cableImageContainer {
     grid-area: wireImage;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr;
 }
 
 .installationSegment .cableImageContainer .cableimage {
     justify-self: end;
-    height: 100%;
+    height: 150px;
 }
 
 .installationSegment .deviceImageContainer {
-    grid-area: deviceImage;
-    display: grid;
-    grid-template-columns: 150px;
-    grid-template-rows: 75px 150px;
+    height: 225px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
 
-.installationSegment .deviceImageContainer .devicePadding {
-    height: 100%;
-    grid-row: 1 / 2;
+.installationSegment .deviceImageContainer #devicePaddingImage {
+    height: 75px;
 }
 
 .installationSegment .deviceImageContainer .deviceimage {
-    height: 100%;
-    justify-self: start;
-    grid-row: 2 / span 2;
+    height: 150px;
 }
 
 .installationSegment .deviceContainer {
     grid-area: deviceSelect;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);    
 }
 
 .installationSegment .deviceContainer .deviceLabel {
-    grid-row: 1 / 3;
+    grid-row: 3;
     grid-column: 1 / 3;
     justify-self: center;
     align-self: center;
+    padding: 5px 0; 
 }
 
 .installationSegment .deviceContainer .deviceButtons {
-    grid-row: 2 / span 2;
+    grid-row: 3;
     grid-column: 1 / 3;
     justify-self: center;
-    align-self: center;
+    align-self: end;
 }
 
-.installationSegment:last-child {
+.installationSegment:nth-last-child(2){
     padding-bottom: 100px;
-}
-
-/*.buttonDiv {*/
-/*    position: absolute;*/
-/*    padding-left: 5px;*/
-/*}*/
-
-/*.buttonDiv > * {*/
-/*    margin: 5px;*/
-/*}*/
-
-.sticky {
-    position: fixed;
-    display: inline;
-    top: 50px;
-    left: 20px;
-    z-index: 9999;
 }
 
 @media (max-width: 1700px) {
