--- a/css/installationsegment.css
+++ b/css/installationsegment.css
@@ -1,12 +1,13 @@
 .powerManagementInstallationContainer {
-    margin: 0 10px;
-    min-height: 100vh;
+    margin: 40px auto;
+    width: 50%;
+    min-height: auto;
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 1fr;
     grid-template-rows: 75px 1fr;
     grid-template-areas: 
-        "powerSupply ."
-        "installation installationInfo";
+        "powerSupply"
+        "installation";
 }
 
 .powerManagementInstallationContainer .powerSupplyContainer {
@@ -24,8 +25,6 @@
 }
 
 .installationSegment {
-    background: rgb(65, 64, 66);
-    border-radius: 10px;
     display: grid;
     grid-template-columns: 1fr auto auto 1fr;
     grid-template-rows: 150px;
@@ -37,25 +36,28 @@
 .installationSegment .checkboxAndcableContainer {
     grid-area: checkboxAndWire;
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
-    grid-template-rows: 1fr 2fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     justify-items: center;
     align-items: center;
 }
 
 .installationSegment .checkboxAndcableContainer input {
-    justify-self: end;
-    align-self: end;
+    grid-column: 2;
+    grid-row: 1;
+    justify-self: center;
+    align-self: start;
     margin-top: 5px;
 }
 
 .installationSegment .checkboxAndcableContainer .cableContainer {
-    grid-column: 2/3;
-    grid-row: 2/3;
+    grid-column: 2;
+    grid-row: 1;
+    place-self: end;
 }
 
 .cableContainerInput input {
-    width: 50px;
+    width: 35px;
 }
 
 .installationSegment .cableImageContainer {
@@ -85,34 +87,50 @@
 .installationSegment .deviceContainer {
     grid-area: deviceSelect;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);    
+    grid-template-columns: 1fr 1fr;    
+    grid-template-rows: 1fr 1fr;
 }
 
 .installationSegment .deviceContainer .deviceLabel {
-    grid-row: 3;
-    grid-column: 1 / 3;
+    grid-row: 2;
+    grid-column: 1;
     justify-self: center;
-    align-self: center;
-    padding: 5px 0; 
+    align-self: start;
+    margin: 10px 0;
 }
 
 .installationSegment .deviceContainer .deviceButtons {
-    grid-row: 3;
-    grid-column: 1 / 3;
+    grid-row: 2;
+    grid-column: 1;
     justify-self: center;
     align-self: end;
 }
 
-.installationSegment:nth-last-child(2){
+.installationSegment .deviceContainer .deviceButtons {
+    display: flex;
+    flex-direction: row;
+}
+
+.installationSegment:nth-last-child(1){
     padding-bottom: 100px;
+}
+
+.installationContainer .buttonDiv {
+    width: 130px;
+    grid-row: 2;
+    grid-column: 2;
+}
+
+.installationContainer .buttonDiv > input {
+    width: 100%;
 }
 
 @media (max-width: 1700px) {
     .buttonDiv {
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        justify-content: flex-start;
+        align-items: flex-start;
         margin-left: 30px;
     }
 }
