--- a/css/installationsegment.css
+++ b/css/installationsegment.css
@@ -1,5 +1,5 @@
 .powerManagementInstallationContainer {
-    background: rgb(255,255,255);
+    background: rgb(255, 255, 255);
     margin: 0 auto;
     max-width: 50%;
     min-width: 650px;
@@ -8,24 +8,22 @@
     height: auto;
     grid-template-columns: 1fr;
     grid-template-rows: 75px 1fr;
-    grid-template-areas: 
-        "powerSupply"                               
-        "installation";
+    grid-template-areas: "powerSupply" "installation";
 }
 
 .powerManagementInstallationContainer .powerSupplyContainer {
     grid-area: powerSupply;
     border-radius: 15px;
-    
-    background: rgb(230,230,230);
+    background: rgb(230, 230, 230);
 }
+
 .powerManagementInstallationContainer .installationContainer {
-    grid-area: installation;     
+    grid-area: installation;
 }
 
 .installationSegment {
     display: grid;
-    grid-template-columns: minmax(200px,1fr) 75px 125px minmax(200px,1fr);
+    grid-template-columns: minmax(200px, 1fr) 75px 125px minmax(200px, 1fr);
     grid-template-rows: 150px;
     grid-template-areas: "checkboxAndWire wireImage deviceImage deviceSelect";
     border-radius: 15px;
@@ -33,16 +31,17 @@
     transition: all .5s ease-in-out;
 }
 
-.installationSegment--delete{
+.installationSegment--delete {
     position: absolute;
     transform: translateX(200vw);
 }
+
 .installationSegment:nth-child(odd) {
     background: #F0F0F0;
 }
 
 .installationSegment:nth-child(even) {
-    background: rgb(230,230,230);
+    background: rgb(230, 230, 230);
 }
 
 .installationSegment .checkboxAndcableContainer {
@@ -76,7 +75,7 @@
     left: 50px;
 }
 
-.cableContainerInput input{
+.cableContainerInput input {
     max-width: 70%;
     margin-top: 10px;
 }
@@ -93,7 +92,7 @@
 .installationSegment .deviceContainer {
     grid-area: deviceSelect;
     display: grid;
-    grid-template-columns: 1fr 1fr;    
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     padding: 10px 0;
 }
@@ -105,8 +104,8 @@
 }
 
 .segmentBig {
-    grid-template-columns: minmax(200px,1fr) 75px 125px minmax(200px,1fr);
-    grid-template-rows: 200px;    
+    grid-template-columns: minmax(200px, 1fr) 75px 125px minmax(200px, 1fr);
+    grid-template-rows: 200px;
 }
 
 .installationSegment .deviceContainer .deviceLabel {
@@ -118,10 +117,10 @@
 
 .installationSegment .deviceContainer .deviceButtons {
     grid-row: 1;
-    grid-column: 1 / span 2; 
+    grid-column: 1 / span 2;
     place-self: start end;
     display: flex;
-    flex-direction: row;    
+    flex-direction: row;
     height: 25px;
     justify-content: center;
     align-items: center;
@@ -129,7 +128,6 @@
 
 .deviceButtons input {
     margin-right: 25px;
-
 }
 
 .deviceContainer img {
@@ -142,7 +140,7 @@
     width: 45px;
 }
 
-.configurationPanel {    
+.configurationPanel {
     background: rgba(0, 0, 0, 0.3);
     display: grid;
     grid-template-columns: 1fr 75px 125px 1fr;
@@ -173,7 +171,7 @@
     place-self: center;
 }
 
-.fileDiv > * {
+.fileDiv>* {
     margin: 2px 0;
 }
 
