--- a/cssConcept/index.css
+++ b/cssConcept/index.css
@@ -12,8 +12,8 @@ html, body {
 
 body {
     margin: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     padding: 0;
 }
 
@@ -100,7 +100,7 @@ h2, p {
     width: 100vw;
     padding: 40px 0;
     height: 95%;
-    grid-template-columns: 1fr 2fr 150px minmax(0, 1fr);
+    grid-template-columns: minmax(275px, 320px) 2fr 150px minmax(0, 1fr);
     grid-template-rows: 1fr 1fr 1fr 1fr;
     row-gap: 25px;
     grid-template-areas: 
@@ -275,7 +275,8 @@ input[type=number] {
 
 .systemFiles {
     grid-area: systemFiles;
-    max-height: 175px;
+    max-height: 165px;
+    height: 165px;
     place-self: center;
 }
 
