--- a/cssConcept/systemSchema.css
+++ b/cssConcept/systemSchema.css
@@ -49,6 +49,7 @@
     grid-row: 1 / span 2;
     place-items: center start;
     display: grid;
+    height: 225px;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr; 
 }
@@ -56,6 +57,7 @@
 .installationSegment .installationDeviceContainer .deviceImageContainer {
     grid-row: 1 / span 2;
     justify-content: start;
+    height: 225px;
 }
 
 .installationSegment .helper {
@@ -63,7 +65,7 @@
 }
 
 .installationSegment .installationDeviceContainer .deviceImageContainer .deviceimage {
-    height: 225px;
+    height: 100%;
 }
 
 .installationSegment .installationBusImage {
