--- a/cssConcept/panelDetails.css
+++ b/cssConcept/panelDetails.css
@@ -1,9 +1,8 @@
 
 .systemConfiguration {
-    width: 100%;
+    width: 90%;
     display: flex;
     flex-direction: column;
-    margin-right: 20px; 
 }
 
 .systemConfiguration > div {
@@ -73,6 +72,15 @@
 
 .segmentContainer .deviceImageContainer {
     grid-area: deviceImage;
+    height: 240px;
+    width: 230px;
+    max-height: 250px;
+    max-width: 240px;
+}
+
+.segmentContainer .deviceImageContainer img {
+    width: 100%;
+    height: 100%;
 }
 
 /* .segmentConfiguration .segmentListContainer {
