--- a/cssConcept/panelDetails.css
+++ b/cssConcept/panelDetails.css
@@ -76,9 +76,9 @@
     height: 100%;
 }
 
-.segmentConfiguration .segmentListContainer .midsegment {
+/* .segmentConfiguration .segmentListContainer .midsegment {
     background: red;
-}
+} */
 
 .counterBox {
     text-align: center;
