--- a/cssConcept/systemPreview.css
+++ b/cssConcept/systemPreview.css
@@ -1,6 +1,6 @@
 .system .systemPreview {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 60% 40%;
   height: 100%;
   overflow: auto;
 }
