--- a/cssConcept/index.css
+++ b/cssConcept/index.css
@@ -7,6 +7,7 @@
 body {
   margin: 0px;
   padding: 0px;
+  font-family: "Spartan";
 }
 
 input::-webkit-outer-spin-button,
@@ -261,7 +262,7 @@ header #logoImgContainer img {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0 50px;
+  padding: 0 25px;
 }
 
 .entryDescription ol {
