--- a/cssConcept/usedDevices.css
+++ b/cssConcept/usedDevices.css
@@ -1,9 +1,10 @@
 .usedDevicesContainer {
   width: 100%;
   height: 100%;
-  display: grid;
-  grid-auto-rows: 100px 1px;
-  row-gap: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .usedDevicesContainer .usedDeviceItem {
@@ -38,7 +39,7 @@
 
 .usedDeviceDocs .usedDeviceDocsAnchor {
   text-decoration: none;
-  color: rgb(252, 28, 28);
+  color: #cc2a27;
 }
 
 .usedDeviceItem .usedDeviceImageContainer {
